<resources>
    <string name="app_name">My Residence</string>
    <string name="menu_residence">Residence</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_call">Call</string>
    <string name="menu_service">Complaints</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="explicit_intent_button">Continue With MyResidence</string>
    <string name="text">Welcome to MyResidence!!</string>
    <string name="image">MyResidence Home</string>
    <string name="nextButton">Open MyResidence Services</string>
    <string name="nextButton2">Locate MyResidence</string>
    <string name="popupButton">Join MyResidence</string>
    <string name="announcement_icon_description">Announcement</string>
    <string-array name="customer_care_options">
        <item>Customer Care 1</item>
        <item>Customer Care 2</item>
        <item>Customer Care 3</item>
    </string-array>

</resources>