<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        android:src="@drawable/image" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play"
        android:layout_below="@id/listView"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pause"
        android:layout_below="@id/playButton"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@id/playButton"
        android:enabled="false"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:layout_below="@id/pauseButton"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@id/pauseButton"
        android:enabled="false"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopButton"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Recipient"
        android:layout_below="@id/seekBar"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter message"
        android:layout_below="@id/editTextRecipient"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/popupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popupButton"
        android:layout_below="@id/editTextMessage"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/locateResidentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton2"
        android:layout_below="@id/popupButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/complaintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Record a Complaint"
        android:layout_below="@id/listView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="navigateToComplaintPage"/>


</RelativeLayout>
